--- a/src/components/navbar/nav.module.scss
+++ b/src/components/navbar/nav.module.scss
@@ -8,13 +8,15 @@ margin: auto;
         flex-direction: row;
 
 
+
         .navlink {
             text-decoration: none;
             text-transform: uppercase;
-            width: 100%;
+            width: 100%;            
             background-color: var(--main-color);
             border: 1px solid #fff;
             box-sizing: border-box; 
+
              
 
             
@@ -26,7 +28,7 @@ margin: auto;
                 font-size: 1rem;
                 font-weight: 400;
                 color: #fff;
-                transition: transform .50s ease;
+                transition: all .50s ease;
 
                 
             }
@@ -34,9 +36,8 @@ margin: auto;
             &:hover {
 
                p {
-                transition: transform .50s ease;
-                transform: scale(1.1);
-
+                transition: all .50s ease;
+                font-size: 1.3rem;
                }
             }
         }
@@ -48,7 +49,7 @@ margin: auto;
 
             p {
                 color: var(--main-color);
-                transform: scale(1.1);
+                font-size: 1.3rem;
 
             }
 
