--- a/src/pages/campaings/campaigns.module.scss
+++ b/src/pages/campaings/campaigns.module.scss
@@ -1,10 +1,66 @@
 .container {
-    width: 100%;
-    height: 100vh;
+	height: 100vh;
+	padding: 0.5rem 1rem;
+	font-family: "Open Sans", sans-serif;
 
-    &__campaign {
-        width: 100%;
-        height: 25rem;
-    }
+	&__campaign {
+		width: 100%;
+		height: 50%;
+		background-color: var(--main-color);
+		display: flex;
+		align-items: center;
+		flex-direction: row-reverse;
+		position: relative;
+		margin-bottom: 1rem;
 
+		.imageanddata {
+			width: 100%;
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+
+			.image {
+				img {
+				}
+			}
+
+			.cardinfo {
+			}
+		}
+
+		.header {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			margin-bottom: 5rem;
+			margin-left: 1rem;
+			margin-top: 5rem;
+			transform-origin: 0 0;
+			transform: rotate(-90deg);
+
+			h3 {
+				margin: 0;
+				font-family: "Open Sans", sans-serif;
+				font-size: 2.5rem;
+				font-weight: 100;
+				text-transform: capitalize;
+				color: white;
+			}
+		}
+
+		.image {
+			img {
+				margin: 1rem;
+			}
+		}
+
+		.cardinfo {
+			margin: 1rem 1rem 1rem 6rem;
+			color: white;
+		}
+
+		&:nth-child(2) {
+			background-color: var(--second-color);
+		}
+	}
 }
