--- a/src/components/navbar/nav.module.scss
+++ b/src/components/navbar/nav.module.scss
@@ -1,65 +1,50 @@
 .container {
-padding: .5rem 1rem;
-margin: auto; 
-    .menu {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: row;
+	padding: 0.5rem 1rem;
+	margin: auto;
+	.menu {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		flex-direction: row;
 
+		.navlink {
+			text-decoration: none;
+			text-transform: uppercase;
+			width: 100%;
+			background-color: var(--main-color);
+			border: 1px solid #fff;
+			box-sizing: border-box;
 
+			p {
+				line-height: 30px;
+				margin: 0;
+				text-align: center;
+				font-family: Arial;
+				font-size: 1rem;
+				font-weight: 400;
+				color: #fff;
+				transition: all 0.1s ease;
+			}
 
-        .navlink {
-            text-decoration: none;
-            text-transform: uppercase;
-            width: 100%;            
-            background-color: var(--main-color);
-            border: 1px solid #fff;
-            box-sizing: border-box; 
+			&:hover {
+				p {
+					transition: all 0.1s ease;
+					font-size: 1.2rem;
+				}
+			}
+		}
 
-             
+		.activenavlink {
+			background-color: var(--bg-offset);
+			transition: all 0.1s ease;
 
-            
-            p {
-                line-height: 30px;
-                margin: 0;
-                text-align: center;
-                font-family: Arial;
-                font-size: 1rem;
-                font-weight: 400;
-                color: #fff;
-                transition: all .50s ease;
+			p {
+				color: white;
+				font-size: 1.2rem;
+			}
 
-                
-            }
-
-            &:hover {
-
-               p {
-                transition: all .50s ease;
-                font-size: 1.3rem;
-               }
-            }
-        }
-
-        .activenavlink {
-            background-color: var(--bg-offset);
-            transition: all .50s ease;  
-
-
-            p {
-                color: var(--main-color);
-                font-size: 1.3rem;
-
-            }
-
-            &:hover {
-                p {
-                    color:var(--main-color);
-                }
-            }
-
-        }
-        
-    }
+			&:hover {
+			}
+		}
+	}
 }
