--- a/src/pages/campaings/campaigns.module.scss
+++ b/src/pages/campaings/campaigns.module.scss
@@ -1,66 +1,67 @@
 .container {
-	height: 100vh;
-	padding: 0.5rem 1rem;
+	margin: 0.5rem 1rem;
 	font-family: "Open Sans", sans-serif;
 
-	&__campaign {
-		width: 100%;
-		height: 50%;
+	.section {
 		background-color: var(--main-color);
-		display: flex;
-		align-items: center;
-		flex-direction: row-reverse;
-		position: relative;
-		margin-bottom: 1rem;
+		border-radius: 5px;
+		margin-bottom: 5rem;
 
-		.imageanddata {
-			width: 100%;
-			display: flex;
-			flex-direction: row-reverse;
-			justify-content: space-between;
+		&:nth-child(even) {
+			background-color: var(--second-color);
+		}
 
-			.image {
-				img {
+		.containerdata {
+			position: relative;
+			align-items: center;
+			justify-content: center;
+
+			.header {
+				position: absolute;
+				-webkit-transform: rotate(90deg) translateX(20px);
+				-moz-transform: rotate(90deg) translateX(20px);
+				-ms-transform: rotate(90deg) translateX(20px);
+				-o-transform: rotate(90deg) translateX(20px);
+				transform: rotate(90deg) translateX(20px);
+				-webkit-transform-origin: 1.8em 0.5em;
+				-moz-transform-origin: 1.8em 0.5em;
+				-ms-transform-origin: 1.8em 0.5em;
+				-o-transform-origin: 1.8em 0.5em;
+				transform-origin: 1.8em 0.5em;
+				left: 0.6rem;
+				top: 0;
+
+				h2 {
+					font-weight: 100;
+					margin: 0 0 1rem 1rem;
+					font-size: 2rem;
+					color: white;
 				}
 			}
 
-			.cardinfo {
+			.imageandcardinfo {
+				width: 100%;
+				display: flex;
+				flex-direction: row-reverse;
+				justify-content: space-between;
+				.image {
+					img {
+						border-radius: 5px;
+						margin: 1rem;
+					}
+				}
+
+				.cardinfo {
+					margin: 1rem;
+					width: 100%;
+					margin-left: 5rem;
+					p {
+						margin: 0;
+						color: white;
+						font-size: 1.5rem;
+					}
+				}
 			}
-		}
-
-		.header {
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			margin-bottom: 5rem;
-			margin-left: 1rem;
-			margin-top: 5rem;
-			transform-origin: 0 0;
-			transform: rotate(-90deg);
-
-			h3 {
-				margin: 0;
-				font-family: "Open Sans", sans-serif;
-				font-size: 2.5rem;
-				font-weight: 100;
-				text-transform: capitalize;
-				color: white;
-			}
-		}
-
-		.image {
-			img {
-				margin: 1rem;
-			}
-		}
-
-		.cardinfo {
-			margin: 1rem 1rem 1rem 6rem;
-			color: white;
-		}
-
-		&:nth-child(2) {
-			background-color: var(--second-color);
 		}
 	}
 }
