--- a/src/pages/news/news.module.scss
+++ b/src/pages/news/news.module.scss
@@ -1,7 +1,37 @@
 .container {
-	padding: 0.5rem 1rem;
+	margin: 0 1rem 0 1rem;
+	display: flex;
+	justify-content: space-between;
+	background-color: var(--main-color);
 
 	.twitter-embed {
-		width: 400px;
+		width: 700px;
+		padding: 1rem;
+	}
+
+	.twitter {
+		align-self: flex-start;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		height: 100%;
+		width: 100%;
+		margin-top: 0;
+
+		.newsheader {
+			margin: 0 0 0 1rem;
+			padding: 1rem;
+
+			p {
+				margin: 0;
+				font-size: 1.5rem;
+				font-family: "Open Sans", sans-serif;
+				color: white;
+			}
+		}
+		img {
+			height: 30rem;
+			width: 25rem;
+		}
 	}
 }
