--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,5 +1,5 @@
 .layout-container {
-    width: 1200px;
-    margin: auto;
-    height: 100vh;
+	width: 1200px;
+	margin: auto;
+	min-height: 100vh;
 }
