--- a/src/pages/blog,/blog.module.scss
+++ b/src/pages/blog,/blog.module.scss
@@ -1,41 +1,99 @@
 .container {
 	height: 100vh;
 	margin: 0.5rem 1rem;
-	font-family: "Open Sans", sans-serif;
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-template-rows: auto;
+	gap: 1rem;
 
 	.article {
-		background-position: center;
-		background-size: cover;
-		width: 100%;
-		height: 100%;
-		margin-bottom: 1rem;
-		position: relative;
-
-		&:nth-child(even) {
-			&:after {
-				background-color: var(--second-color);
-			}
-		}
-
-		&:after {
-			position: absolute;
-			content: "";
-			width: 100%;
-			top: 0;
-			left: 0;
-			height: 100%;
-			background-color: var(--main-color);
-			opacity: 0.3;
-			z-index: -1;
-		}
+		width: 90%;
+		justify-self: center;
+		overflow: hidden;
+		border-radius: 5px;
 
 		.cardinfo {
 			width: 100%;
 			height: 100%;
-			z-index: 999;
-			padding: 5rem;
+			background-size: cover;
+			background-position: center;
+			transition: all 1.5s;
+			position: relative;
+			z-index: 1;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			.info {
+				border: 1rem solid white;
+				height: 80%;
+				width: 90%;
+				z-index: 9999999;
+				opacity: 0.3;
+				color: white;
+				font-family: "Open Sans", sans-serif;
+				transition: all 0.25s;
+				display: flex;
+				flex-direction: column;
+
+				.header {
+					width: 100%;
+					text-align: center;
+					h1 {
+						text-transform: uppercase;
+						font-size: 3rem;
+					}
+				}
+
+				.description {
+					width: 100%;
+					height: 100%;
+					text-align: center;
+					position: relative;
+					h4 {
+						font-size: 1.5rem;
+						font-weight: 400;
+					}
+
+					span {
+						position: absolute;
+						bottom: 0.5rem;
+						right: 0.5rem;
+
+						a {
+							color: white;
+							cursor: pointer;
+							text-decoration: none;
+							font-weight: 900;
+						}
+					}
+				}
+			}
+
+			&:after {
+				position: absolute;
+				content: " ";
+				width: 100%;
+				height: 100%;
+				opacity: 0.6;
+				transition: all 0.5s;
+				background-color: #211e1e;
+
+				&:hover {
+					background-color: none;
+				}
+			}
+
+			&:hover {
+				&::after {
+					background-color: var(--main-color);
+					opacity: 1;
+				}
+
+				.info {
+					opacity: 1;
+				}
+			}
 		}
 	}
 }
