--- a/src/pages/campaings/campaigns.module.scss
+++ b/src/pages/campaings/campaigns.module.scss
@@ -5,7 +5,7 @@
 	.section {
 		background-color: var(--main-color);
 		border-radius: 5px;
-		margin-bottom: 5rem;
+		margin-bottom: 2.5rem;
 
 		&:nth-child(even) {
 			background-color: var(--second-color);
@@ -36,6 +36,8 @@
 					margin: 0 0 1rem 1rem;
 					font-size: 2rem;
 					color: white;
+					text-transform: uppercase;
+					position: relative;
 				}
 			}
 
@@ -55,6 +57,9 @@
 					margin: 1rem;
 					width: 100%;
 					margin-left: 5rem;
+					display: flex;
+					justify-content: flex-end;
+					align-items: flex-end;
 					p {
 						margin: 0;
 						color: white;
