--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,25 +8,19 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-
-
- :root {
-    --main-color:  #CE0F69;
-    --second-color: #88304e;
-    --third-color: #522546;
-    --highlight: #fff;
-    --bg-offset: #311d3f;
-    
- }
-
-
-
+:root {
+	--main-color: #ce0f69;
+	--second-color: #df5f9c;
+	--third-color: #522546;
+	--highlight: #fff;
+	--bg-offset: #311d3f;
+}
 
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+	line-height: 1.15;
+	/* 1 */
+	-webkit-text-size-adjust: 100%;
+	/* 2 */
 }
 
 /* Sections
@@ -37,7 +31,7 @@ html {
    */
 
 body {
-  margin: 0;
+	margin: 0;
 }
 
 /**
@@ -45,7 +39,7 @@ body {
    */
 
 main {
-  display: block;
+	display: block;
 }
 
 /**
@@ -54,8 +48,8 @@ main {
    */
 
 h1 {
-  font-size: 2rem;
-  margin: 0.67em 0;
+	font-size: 2rem;
+	margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -67,12 +61,12 @@ h1 {
    */
 
 hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+	box-sizing: content-box;
+	/* 1 */
+	height: 0;
+	/* 1 */
+	overflow: visible;
+	/* 2 */
 }
 
 /**
@@ -81,10 +75,10 @@ hr {
    */
 
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
 }
 
 /* Text-level semantics
@@ -95,7 +89,7 @@ pre {
    */
 
 a {
-  background-color: transparent;
+	background-color: transparent;
 }
 
 /**
@@ -104,12 +98,12 @@ a {
    */
 
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
+	border-bottom: none;
+	/* 1 */
+	text-decoration: underline;
+	/* 2 */
+	text-decoration: underline dotted;
+	/* 2 */
 }
 
 /**
@@ -118,7 +112,7 @@ abbr[title] {
 
 b,
 strong {
-  font-weight: bolder;
+	font-weight: bolder;
 }
 
 /**
@@ -129,10 +123,10 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+	font-family: monospace, monospace;
+	/* 1 */
+	font-size: 1em;
+	/* 2 */
 }
 
 /**
@@ -140,7 +134,7 @@ samp {
    */
 
 small {
-  font-size: 80%;
+	font-size: 80%;
 }
 
 /**
@@ -150,18 +144,18 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sub {
-  bottom: -0.25em;
+	bottom: -0.25em;
 }
 
 sup {
-  top: -0.5em;
+	top: -0.5em;
 }
 
 /* Embedded content
@@ -172,7 +166,7 @@ sup {
    */
 
 img {
-  border-style: none;
+	border-style: none;
 }
 
 /* Forms
@@ -188,14 +182,14 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+	font-family: inherit;
+	/* 1 */
+	font-size: 100%;
+	/* 1 */
+	line-height: 1.15;
+	/* 1 */
+	margin: 0;
+	/* 2 */
 }
 
 /**
@@ -205,8 +199,8 @@ textarea {
 
 button,
 input {
-  /* 1 */
-  overflow: visible;
+	/* 1 */
+	overflow: visible;
 }
 
 /**
@@ -216,8 +210,8 @@ input {
 
 button,
 select {
-  /* 1 */
-  text-transform: none;
+	/* 1 */
+	text-transform: none;
 }
 
 /**
@@ -228,7 +222,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
+	-webkit-appearance: button;
 }
 
 /**
@@ -239,8 +233,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
+	border-style: none;
+	padding: 0;
 }
 
 /**
@@ -251,7 +245,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+	outline: 1px dotted ButtonText;
 }
 
 /**
@@ -259,7 +253,7 @@ button:-moz-focusring,
    */
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+	padding: 0.35em 0.75em 0.625em;
 }
 
 /**
@@ -270,18 +264,18 @@ fieldset {
    */
 
 legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+	box-sizing: border-box;
+	/* 1 */
+	color: inherit;
+	/* 2 */
+	display: table;
+	/* 1 */
+	max-width: 100%;
+	/* 1 */
+	padding: 0;
+	/* 3 */
+	white-space: normal;
+	/* 1 */
 }
 
 /**
@@ -289,7 +283,7 @@ legend {
    */
 
 progress {
-  vertical-align: baseline;
+	vertical-align: baseline;
 }
 
 /**
@@ -297,7 +291,7 @@ progress {
    */
 
 textarea {
-  overflow: auto;
+	overflow: auto;
 }
 
 /**
@@ -307,10 +301,10 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+	box-sizing: border-box;
+	/* 1 */
+	padding: 0;
+	/* 2 */
 }
 
 /**
@@ -319,7 +313,7 @@ textarea {
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto;
+	height: auto;
 }
 
 /**
@@ -328,10 +322,10 @@ textarea {
    */
 
 [type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+	-webkit-appearance: textfield;
+	/* 1 */
+	outline-offset: -2px;
+	/* 2 */
 }
 
 /**
@@ -339,7 +333,7 @@ textarea {
    */
 
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 
 /**
@@ -348,10 +342,10 @@ textarea {
    */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+	-webkit-appearance: button;
+	/* 1 */
+	font: inherit;
+	/* 2 */
 }
 
 /* Interactive
@@ -362,7 +356,7 @@ textarea {
    */
 
 details {
-  display: block;
+	display: block;
 }
 
 /*
@@ -370,7 +364,7 @@ details {
    */
 
 summary {
-  display: list-item;
+	display: list-item;
 }
 
 /* Misc
@@ -381,7 +375,7 @@ summary {
    */
 
 template {
-  display: none;
+	display: none;
 }
 
 /**
@@ -389,5 +383,5 @@ template {
    */
 
 [hidden] {
-  display: none;
+	display: none;
 }
