--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,3 +1,24 @@
 .container {
-    padding: .5rem 1rem;
+	margin: 0.5rem 1rem;
+	background-color: var(--main-color);
+	color: white;
+
+	article {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		header {
+			font-size: 2.5rem;
+			font-family: Arial, Helvetica, sans-serif;
+		}
+
+		.homepage {
+			img {
+				width: 10rem;
+			}
+		}
+	}
 }
