updated some styling issues wip

--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -1,24 +1,48 @@
 .form {
+	height: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: stretch;
-	justify-content: center;
-	height: 100%;
+	align-items: center;
+
+	label {
+		width: 81%;
+		margin: 1rem 0 0 0;
+		text-align: left;
+		font-size: 1.5rem;
+		color: white;
+	}
 
 	.input {
-		flex-grow: 1;
-		margin: 1rem 1rem 0 0;
+		display: block;
+		margin: 0 0 0 0;
+		width: 80%;
 	}
 
 	.textarea {
 		resize: none;
-		margin: 1rem 1rem 0 0;
 		height: 10rem;
+		width: 80%;
+		display: block;
+		margin: 0 0 0 0;
 	}
 
 	.submit {
-		width: 5rem;
-		padding: 0.4rem 0.8rem;
-		margin: 1rem 0 1rem 0;
+		padding: 0.5rem 1rem;
+		margin: 1rem 0 1rem 3.4rem;
+		align-self: flex-start;
+		outline: 0;
+		border: 1px solid white;
+		background-color: var(--main-color);
+		color: white;
+		font-size: 1.5rem;
+		transition: 0.25s ease-in-out;
+
+		&:hover {
+			cursor: pointer;
+		}
+
+		&:focus {
+			outline: 3px solid white;
+		}
 	}
 }
