--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,22 +1,26 @@
 .header {
-	padding: 0.5rem 1rem;
-	margin: auto;
+	margin: 0.5rem 1rem;
+
 	.container {
 		width: 100%;
+		height: 8rem;
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
+		box-sizing: border-box;
 
 		h1 {
 			font-family: open sans;
 			font-weight: 700;
 			font-size: 3rem;
 			color: var(--main-color);
-			margin-bottom: 0;
+			margin: 0;
 		}
 
 		img {
-			height: 4rem;
-			margin: 32.16px 0 0 0;
+			height: 7rem;
+			width: 7rem;
+			margin: 0;
 		}
 	}
 }
