--- a/src/pages/agreements,/agreements.module.scss
+++ b/src/pages/agreements,/agreements.module.scss
@@ -3,18 +3,34 @@
 	height: 100vh;
 	background-color: var(--main-color);
 	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 2rem;
 
 	.header {
-		height: 5rem;
 		background-color: var(--main-color);
+		color: white;
 
-		h1 {
+		div {
+			margin: 1rem 1rem;
 			width: 100%;
-			text-align: center;
-			line-height: 5rem;
-			font-size: 3rem;
-			margin: 0;
-			color: white;
+
+			h1 {
+				width: 100%;
+				text-align: left;
+				line-height: 5rem;
+				font-size: 2.5rem;
+				margin: 0;
+			}
+
+			h2 {
+				width: 100%;
+				text-align: left;
+				font-size: 1.8rem;
+				margin: 0;
+			}
 		}
 	}
 
@@ -30,7 +46,6 @@
 			height: 100%;
 			display: flex;
 			justify-content: space-between;
-			z-index: 9;
 
 			.links {
 				color: white;
@@ -46,6 +61,7 @@
 				&:hover {
 					background-color: white;
 					color: black;
+
 					.dropdown {
 						justify-content: center;
 						align-items: left;
@@ -71,7 +87,6 @@
 					border: 1px solid white;
 					margin: 0.5rem 0 0 0;
 					font-family: Arial, Helvetica, sans-serif;
-					z-index: -1;
 
 					a {
 						padding: 1rem 2rem;
