--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -3,6 +3,7 @@
 	background-color: var(--main-color);
 	display: flex;
 	flex-direction: column;
+	height: 100%;
 	.header {
 		width: 100%;
 		height: 10rem;
@@ -21,6 +22,7 @@
 		justify-content: space-between;
 		.formcontainer {
 			width: 100%;
+			height: 100%;
 
 			.form {
 				display: flex;
@@ -29,13 +31,13 @@
 
 				input {
 					display: block;
-					margin: auto;
+					margin: 0;
 					width: 80%;
 				}
 
 				textarea {
 					display: block;
-					margin: auto;
+					margin: 0;
 					margin-bottom: 1rem;
 					width: 80%;
 					resize: none;
@@ -51,12 +53,6 @@
 				button {
 					padding: 0.5rem 1rem;
 					font-size: 1rem;
-					margin-right: 1rem;
-
-					&:nth-child(even) {
-						margin-left: 1rem;
-						margin-right: 0;
-					}
 				}
 			}
 		}
